--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.5",
+    "axios": "^1.6.7",
     "firebase": "^10.8.1",
     "next": "14.1.0",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.1",
     "sass": "^1.71.1"
   },
